<resources>
    <string name="app_name">Dry July</string>
    <string name="action_settings">Settings</string>
    <string name="directions_welcome">Welcome to Dry July!</string>
    <string name="directions_detailed">The idea is to go one month without alcohol. This app will help you reach that goal. Simply press the button below when you are ready to start your month of sobriety.</string>
    <string name="directions_start">Start</string>
    <string name="directions_welcome_started">Welcome to sobriety!</string>
    <string name="directions_detailed_started">Once a day you will receive a notification asking whether you have managed to stay sober or not. Simply respond and stay strong!</string>
    <string name="directions_quit">Quit</string>
    <string name="directions_title">Dry July</string>
    <string name="no">no</string>
    <string name="start_over">Start over</string>
    <string name="yes">yes</string>
    <string name="notification_question">Are you still sober?</string>
    <string name="directions_days_sober">Days sober:</string>
    <string name="checkin">Check in</string>
    <string name="directions_days_sober_question">Are you still sober?</string>
    <string name="directions_reset">No, I want to start again</string>
    <string name="settings_timestamp_override">Timestamp override</string>
    <string name="settings_override">Override</string>
    <string name="nav_home">Home</string>
    <string name="nav_settings">Settings</string>
    <string name="directions_days_sober_question_heading">Check in</string>
    <string name="toast_counter_reset">Start again!</string>
    <string name="toast_checkin_complete">Thanks for checking in. Keep up the good work!</string>
</resources>
