<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="@dimen/Android_Design_rhythmThird">

    <LinearLayout
        android:id="@+id/directions_start_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/Android_Design_rhythmHalve">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/directions_welcome"
            android:textSize="@dimen/textSizeHeading"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/directions_detailed"/>

        <Button
            android:id="@+id/directions_start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/directions_start"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/directions_days_sober_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/Android_Design_rhythmHalve">

        <TextView
            android:id="@+id/directions_text_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/directions_welcome_started"
            android:textSize="@dimen/textSizeHeading"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/directions_detailed_started"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/directions_days_sober"/>

        <TextView
            android:id="@+id/directions_text_days"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="50sp"
            tools:text="12"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/Android_Design_rhythmThird"
            android:text="@string/directions_days_sober_question_heading"
            android:textSize="@dimen/textSizeHeading"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/directions_days_sober_question"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal">

            <Button
                android:id="@+id/directions_stop_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/Android_Design_rhythmSixth"
                android:text="@string/directions_quit"/>

            <Button
                android:id="@+id/directions_reset_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/Android_Design_rhythmSixth"
                android:text="@string/no"/>

            <Button
                android:id="@+id/directions_check_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>